--- a/Week7/Day2/01-css-linking-imports/button.css
+++ b/Week7/Day2/01-css-linking-imports/button.css
@@ -1,13 +1,14 @@
-button {
+#hover-button {
     width: 150px;
     height: 50px;
     background-color: transparent;
     color: white;
-    border: 2px solid white;
+    /* border: 2px solid white; */
     margin-right: 10px;
     outline: none;
     border-radius: 5px;
     cursor: pointer;
+    /* border: 2px solid red; */
 }
 
 button:hover {
