--- a/Week7/Day2/01-css-linking-imports/styles.css
+++ b/Week7/Day2/01-css-linking-imports/styles.css
@@ -23,3 +23,11 @@ h1 {
     margin: 150px;
 }
 
+button {
+    border:2px solid blue;
+}
+
+.container-children {
+    border: 2px solid purple;
+}
+
