--- a/Week7/Day2/02-css-selectors/main.css
+++ b/Week7/Day2/02-css-selectors/main.css
@@ -1,4 +1,39 @@
 /* Your code here */
+h1#page-title {
+    font-weight: bold;
+}
+
+.pagenum {
+    /* border: 2px solid red; */
+    position: absolute;
+    right: 10px;
+    font-size: small;
+}
+
+p {
+    text-align: justify;
+    /* margin-top: .75em;
+    margin-bottom: .75em; */
+    margin: .75em 0 
+}
+
+pre {
+    width: fit-content;
+    margin: 100px auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+pre > a {
+    color: black;
+}
 
 /* ===== DO NOT EDIT BELOW THIS COMMENT ===== */
 
