--- a/Week7/Day2/06-css-positioning/main.css
+++ b/Week7/Day2/06-css-positioning/main.css
@@ -2,9 +2,16 @@ html, body {
     font-family: sans-serif;
 }
 
+:root {
+    --hover-board: absolute;
+    --custom-yellow: #ffff00;
+}
+
 .container {
     background-color: #2b2d2f;
     position: relative;
+    height: 200px;
+    /* height: 1000px; */
 }
 
 .element {
@@ -16,56 +23,54 @@ html, body {
 }
 
 #yellow-box {
-    background-color: #ffff00;
-    /* Fill these in
-    position: ;
+    background-color: var(--custom-yellow);
+    position: static;
     bottom: 0;
-    left: 0;
+    left: 40px;
     right: 0;
-    top: 0;
-    z-index: ;
+    top: 30px;
+    z-index: -10000;
 }
 
 #pink-box {
     background-color: #ff69b4;
-    /* Fill these in
-    position: ;
-    bottom: 0;
+    position: relative;
+    bottom: 20px;
     left: 0;
     right: 0;
-    top: 0;
-    z-index: ;
+    /* top: 0; */
+    z-index: -60;
 }
 
 #blue-box {
     background-color: #00eeee;
-    /* Fill these in
-    position: ;
+    /* position: var(--hover-board); */
+    position: absolute;
     bottom: 0;
-    left: 0;
+    left: 250px;
     right: 0;
-    top: 0;
-    z-index: ;
+    top: 50px;
+    z-index: -5;
 }
 
 #red-box {
     background-color: #ff0000;
-    /* Fill these in
-    position: ;
+
+    position: sticky;
     bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: ;
+    left: 0px;
+    /* right: 0; */
+    top: 40px;
+    z-index: -10;
 }
 
 #orange-box {
     background-color: #ffa500;
-    /* Fill these in
-    position: ;
+    
+    position: fixed;
     bottom: 0;
-    left: 0;
+    left: 180px;
     right: 0;
-    top: 0;
-    z-index: ;
+    top: 40px;
+    z-index: -1;
 }
