--- a/Week7/Day3/01-css-flexible-box-model/main.css
+++ b/Week7/Day3/01-css-flexible-box-model/main.css
@@ -8,6 +8,9 @@
     /* Phase 1 */
 
     /* Your code here */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .example2 {
@@ -18,6 +21,8 @@
     /* Phase 2 */
 
     /* Your code here */
+    display: inline-flex;
+    align-items: center;
 }
 
 .example2 > button {
@@ -36,6 +41,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    border: 2px solid red;
 }
 
 .example3 > div {
@@ -47,12 +53,22 @@
     /* Phase 3 */
 
     /* Your code here */
+    flex-basis: 33%;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .example4 {
     /* Phase 4 - Part 1 of 2 */
 
     /* Your code here */
+    display: flex;
 }
 
 .sidebar {
@@ -62,6 +78,8 @@
     /* Phase 4 - Part 2 of 2 */
 
     /* Your code here */
+    display: flex;
+    flex-direction: column;
 }
 .content-area {
     background-color: #E8EFF0;
