--- a/Week7/Day3/03-css-media-queries/main.css
+++ b/Week7/Day3/03-css-media-queries/main.css
@@ -85,9 +85,24 @@ header {
 /* ----- Phase 1 - Moderate Screen ----- */
 
 /* Your code here */
+@media screen and (min-width: 821px) and (max-width: 1219px){
+    .content {
+        flex-direction: row;
+    }
+}
+
 
 /* ----- Phase 1 - Wide Screen ----- */
 
+@media screen and (min-width: 1220px) {
+    .content {
+        flex-direction: row;
+    }
+
+    .page {
+        flex-direction: row;
+    }
+}
 /* Your code here */
 
 /* ===== PRINTING ===== */
@@ -95,3 +110,32 @@ header {
 /* Phase 2 */
 
 /* Your code here */
+@media print {
+    header, .sidebar{
+        display: none;
+        /* visibility:  hidden; */
+    }
+
+    /* bonus 
+        increase radius
+        smaller width/height
+        move to top right
+    */
+    .image-box {
+        position: fixed;
+        border-radius: 50%;
+        width: 90px;
+        height: 90px;
+        top: 40px;
+        right: 40px;
+    }
+
+    .story-box {
+        padding: 0;
+        border-radius: 0;
+        background-color: white;
+        filter:none;
+    }
+
+
+}
