--- a/Week7/Day4/01-css-transitions/your-code.css
+++ b/Week7/Day4/01-css-transitions/your-code.css
@@ -5,8 +5,13 @@
     width: auto;
     margin-left: 300px;
     /* Your code here */
+    transition: transform 2s;
 }
 
+
+.rocket_svg:hover {
+    transform: rotate(250deg);
+}
 /* Create rocket hover animation here
 
 
@@ -17,6 +22,12 @@
     width: auto;
     margin-left: 200px;
     /* Your code here */
+    transition: transform 2s, height 4s 2s cubic-bezier(1,-2.72, 0, 4.52);
+}
+
+.astronaut_svg:hover {
+    transform: translateX(100px);
+    height: 400px;
 }
 
 /* Create astronaut hover animation here
@@ -27,9 +38,24 @@
     height: 200px;
     width: auto;
     margin-left: 300px;
-    /* Your animation here
+    animation: infinite linear 2s spin;
+    
 }
 
 @keyframes spin {
-    /* Set up your keyframe animation here
+    from {
+        transform: rotate(0)
+    }
+
+    33% {
+        height: 100px;
+    }
+
+    50% {
+        translate: 200px;
+    }
+
+    to {
+        transform: rotate(360deg)
+    }
 }
